# modsig

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: apk.rs  common.rs  lib.rs  main.rs  module.rs  signable.rs  signer.rs  utils.rs  verifier.rs  zip.rs
src/cli/: cert.rs  digest.rs  info.rs  mod.rs  sign.rs  verify.rs
src/file_formats/module/: mod.rs
src/signing_block/: algorithms.rs  mod.rs  scheme_v2.rs  source_stamp.rs
tests/: test_sign.rs  test_verify_fixture.rs
