[package]
name = "ksusig"
version = "0.3.0"
edition = "2021"
description = "KernelSU Module Signature Tooling Library and CLI"
documentation = "https://docs.rs/ksusig"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Kernel-SU/ksusig"
keywords = ["KernelSU", "signing", "signature", "ksusig", "module"]
categories = ["api-bindings", "command-line-utilities"]
exclude = ["tests/"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }
md5 = { version = "0.7.0", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"], optional = true }
p384 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"], optional = true }
# keystore support
pem = { version = "3.0", optional = true }
pkcs8 = { version = "0.10", features = ["encryption", "pem"], optional = true }
p12 = { version = "0.6", optional = true }
x509-cert = { version = "0.2", optional = true }
# certificate chain verification (using rustls-webpki for proper chain validation)
rustls-webpki = { version = "0.103", default-features = false, features = ["ring"], optional = true }
rustls-pki-types = { version = "1.0", optional = true }
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
base64 = "0.22"
# ELF file support
goblin = { version = "0.8", optional = true }
scroll = { version = "0.12", optional = true }

[dev-dependencies]
# test serialization (note that serialization is used in web_demo)
serde_json = "1.0.138"

# test main.rs
assert_cmd = "2.0.16"
predicates = "3.1.3"

# private key generation for testing
rand = "0.8.0"

# test issuer
x509-parser = { version = "0.17.0" }

# temp files for ELF tests
tempfile = "3"

[features]
# by default, very opinionated features are enabled
# used mostly for main.rs
default = ["directprint", "serde", "hash", "signing", "keystore", "verify", "elf"]

# verify the KSU Signing Block
signing = ["hash", "dep:p256", "dep:p384"]

# keystore support (PEM and P12 format)
keystore = ["signing", "dep:pem", "dep:pkcs8", "dep:p12", "dep:x509-cert"]

# certificate chain verification (with real signature validation)
verify = ["signing", "dep:x509-cert", "dep:rustls-webpki", "dep:rustls-pki-types"]

# allows to serialize and deserialize structs with serde
serde = ["dep:serde"]

# print the KSU Signing Block while parsing
directprint = []

# allows to calculate the hash of Certificate
# provides the functions sha1_cert(), sha256_cert(), md5_cert() for the Certificate struct
hash = ["dep:md5", "dep:sha1", "dep:sha2"]

# ELF file format support
elf = ["dep:goblin", "dep:scroll"]
